# benkyou

./: .gitignore  GEMINI.md  LICENSE  README.md  build.sh  main.py  pyproject.toml
.github/workflows/: test.yml
frontend/: app.py
frontend/widgets/: main_menu.py  progress.py  progress_menu.py  study_menu.py  study_session.py
progress_files/: N5.json
spaced_repetition/: card.py  card_data.py  deck.py
tests/: test_card.py  test_deck.py  test_fuzzy_match.py  test_main_menu.py  test_progress.py  test_progress_menu.py  test_romaji_to_kana.py  test_study_menu.py  test_study_session.py
translation/: romaji_to_kana.py
utils/: fuzzy_match.py
vocab_files/: N5.csv
