[project]
name = "benkyou"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyqt6>=6.9.1",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.15.0",
    "pytest>=8.4.1",
    "pytest-qt>=4.5.0",
]
